[tool.poetry]
name = "retrocookie"
version = "0.4.0"
description = "Update Cookiecutter templates with changes from their instances"
authors = ["Claudio Jolowicz <mail@claudiojolowicz.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/cjolowicz/retrocookie"
repository = "https://github.com/cjolowicz/retrocookie"
documentation = "https://retrocookie.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
Changelog = "https://github.com/cjolowicz/retrocookie/releases"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
git-filter-repo = "^2.26.0"
pygit2 = "^1.2.1"
typing-extensions = {version = "^3.7.4", optional = true}
"github3.py" = {version = "^1.3.0", optional = true}
tenacity = {version = "^6.3.1", optional = true}
appdirs = {version = "^1.4.4", optional = true}
rich = {version = "^9.5.1", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
coverage = {extras = ["toml"], version = "^5.3"}
safety = "^1.10.3"
mypy = "^0.800"
typeguard = "^2.9.1"
xdoctest = {extras = ["colors"], version = "^0.15.2"}
sphinx = "^3.4.3"
sphinx-autobuild = "^2020.9.1"
pre-commit = "^2.9.3"
cookiecutter = "^1.7.2"
pygments = "^2.7.4"
flake8 = "^3.8.4"
black = "^20.8b1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.11.1"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.0.14"
pep8-naming = "^0.11.1"
darglint = "^1.5.8"
reorder-python-imports = "^2.3.6"
pre-commit-hooks = "^3.4.0"
sphinx-rtd-theme = "^0.5.1"
sphinx-click = "^2.5.0"
Pygments = "^2.7.4"

[tool.poetry.extras]
pr = ["appdirs", "github3.py", "rich", "tenacity", "typing-extensions"]

[tool.poetry.scripts]
retrocookie = "retrocookie.__main__:main"
retrocookie-pr = "retrocookie.pr.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["retrocookie"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
